# Ariadne-String

./: .gitmodules  CMakeLists.txt  README.md
bat/: build-3rdparty.bat  generate-ALL-Solutions.bat  generate-Ariadne-String-Solution.bat  generate-glfw-Solution.bat  generate-opencv-Solution.bat  template.vcxproj.user.in  update-3rdparty.bat
src/: AlgSimple.cpp  CMakeLists.txt  GenerationConfig.h  Preview.cpp  Preview.h  SetupView.cpp  SetupView.h  Solution.cpp  Solution.h  main.cpp
